# lazy-regex

./: CHANGELOG.md  Cargo.toml  README.md  bacon.toml
examples/regexes/: Cargo.toml  README.md
examples/regexes/src/: main.rs
src/: lib.rs  remove.rs
src/proc_macros/: Cargo.toml  args.rs  mod.rs  regex_code.rs
tests/: regex_if.rs  regex_switch.rs  remove.rs  replace.rs
