[package]
name = "lazy-regex"
version = "2.0.2"
authors = ["Canop <cano.petrole@gmail.com>"]
edition = "2018"
description = "lazy static regular expressions checked at compile time"
keywords = ["macro", "lazy", "static", "regex"]
license = "MIT"
categories = ["text-processing"]
repository = "https://github.com/Canop/lazy-regex"
readme = "README.md"

[dependencies]
once_cell = "1.7"
regex = "1.5"

[dependencies.lazy-regex-proc_macros]
path = "src/proc_macros"
version = "2.0.2"

[workspace]
members = ["src/proc_macros", "examples/regexes"]
