[package]
name = "lazy-regex-proc_macros"
version = "2.2.1"
authors = ["Canop <cano.petrole@gmail.com>"]
description = "proc macros for the lazy_regex crate"
license = "MIT"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"

[lib]
proc-macro = true
path = "mod.rs"
